# swap

./: README.md  data.py  pyproject.toml
swap/: tui.py  wikitableobject.py  wikitableparser.py  wikitableprocessor.py
